--- a/style.css
+++ b/style.css
@@ -13,19 +13,406 @@ display: grid;
 justify-content: center;
 align-items: center;
 color: #ffffff;
-background-color:#322e2e;
+background-color:#18181b;
 margin:0;
 }
+
+body {
+	--background-color: #18181b;
+	--text-color: #a1a1aa;
+	--card-background-color: rgba(255, 255, 255, 0.015);
+	--card-border-color: rgba(255, 255, 255, 0.1);
+	--card-box-shadow-1: rgba(0, 0, 0, 0.05);
+	--card-box-shadow-1-y: 3px;
+	--card-box-shadow-1-blur: 6px;
+	--card-box-shadow-2: rgba(0, 0, 0, 0.1);
+	--card-box-shadow-2-y: 8px;
+	--card-box-shadow-2-blur: 15px;
+	--card-label-color: #ffffff;
+	--card-icon-color: #d4d4d8;
+	--card-icon-background-color: rgba(255, 255, 255, 0.08);
+	--card-icon-border-color: rgba(255, 255, 255, 0.12);
+	--card-shine-opacity: 0.1;
+	--card-shine-gradient: conic-gradient(
+		from 205deg at 50% 50%,
+		rgba(16, 185, 129, 0) 0deg,
+		#10b981 25deg,
+		rgba(52, 211, 153, 0.18) 295deg,
+		rgba(16, 185, 129, 0) 360deg
+	);
+	--card-line-color: #2a2b2c;
+	--card-tile-color: rgba(16, 185, 129, 0.05);
+	--card-hover-border-color: rgba(255, 255, 255, 0.2);
+	--card-hover-box-shadow-1: rgba(0, 0, 0, 0.04);
+	--card-hover-box-shadow-1-y: 5px;
+	--card-hover-box-shadow-1-blur: 10px;
+	--card-hover-box-shadow-2: rgba(0, 0, 0, 0.3);
+	--card-hover-box-shadow-2-y: 15px;
+	--card-hover-box-shadow-2-blur: 25px;
+	--card-hover-icon-color: #34d399;
+	--card-hover-icon-background-color: rgba(52, 211, 153, 0.1);
+	--card-hover-icon-border-color: rgba(52, 211, 153, 0.2);
+	--blur-opacity: 0.01;
+  }
+  
+  body.toggle .grid * {
+	transition-duration: 0s !important;
+  }
+  
+  .grid {
+	flex-wrap: wrap;
+	display: flex;
+	grid-template-columns: repeat(2, 260px);
+	grid-gap: 32px;
+	position: relative;
+	z-index: 1;
+	justify-content: center;
+  }
+  
+  .card {
+	aspect-ratio: 1;
+	height: 260px;
+	background-color: var(--background-color);
+	box-shadow: 0px var(--card-box-shadow-1-y) var(--card-box-shadow-1-blur) var(--card-box-shadow-1), 0px var(--card-box-shadow-2-y) var(--card-box-shadow-2-blur) var(--card-box-shadow-2), 0 0 0 1px var(--card-border-color);
+	padding: 56px 16px 16px 16px;
+	border-radius: 15px;
+	cursor: pointer;
+	position: relative;
+	transition: box-shadow 0.25s;
+  }
+  .card::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	border-radius: 15px;
+	background-color: var(--card-background-color);
+  }
+  .card .icon {
+	z-index: 2;
+	position: relative;
+	display: table;
+	padding: 8px;
+  }
+  .card .icon::after {
+	content: "";
+	position: absolute;
+	inset: 4.5px;
+	border-radius: 50%;
+	background-color: var(--card-icon-background-color);
+	border: 1px solid var(--card-icon-border-color);
+	-webkit-backdrop-filter: blur(2px);
+			backdrop-filter: blur(2px);
+	transition: background-color 0.25s, border-color 0.25s;
+  }
+  .card .icon svg {
+	position: relative;
+	z-index: 1;
+	display: block;
+	width: 24px;
+	height: 24px;
+	transform: translateZ(0);
+	color: var(--card-icon-color);
+	transition: color 0.25s;
+  }
+  .card h4 {
+	display: flex;
+	justify-content: center;
+	z-index: 2;
+	position: relative;
+	margin: 12px 0 4px 0;
+	font-family: inherit;
+	font-weight: 600;
+	font-size: 14px;
+	line-height: 2;
+	color: var(--card-label-color);
+  }
+  .card p {
+	z-index: 2;
+	position: relative;
+	margin: 0;
+	font-size: 14px;
+	line-height: 1.7;
+	color: var(--text-color);
+  }
+
+  .card .shine {
+	border-radius: inherit;
+	position: absolute;
+	inset: 0;
+	z-index: 1;
+	overflow: hidden;
+	opacity: 0;
+	transition: opacity 0.5s;
+  }
+  .card .shine:before {
+	content: "";
+	width: 150%;
+	padding-bottom: 150%;
+	border-radius: 50%;
+	position: absolute;
+	left: 50%;
+	bottom: 55%;
+	filter: blur(35px);
+	opacity: var(--card-shine-opacity);
+	transform: translateX(-50%);
+	background-image: var(--card-shine-gradient);
+  }
+  .card .background {
+	border-radius: inherit;
+	position: absolute;
+	inset: 0;
+	overflow: hidden;
+	-webkit-mask-image: radial-gradient(circle at 60% 5%, black 0%, black 15%, transparent 60%);
+	mask-image: radial-gradient(circle at 60% 5%, black 0%, black 15%, transparent 60%);
+  }
+  .card .background .tiles {
+	opacity: 0;
+	transition: opacity 0.25s;
+  }
+  .card .background .tiles .tile {
+	position: absolute;
+	background-color: var(--card-tile-color);
+	-webkit-animation-duration: 8s;
+			animation-duration: 8s;
+	-webkit-animation-iteration-count: infinite;
+			animation-iteration-count: infinite;
+	opacity: 0;
+  }
+  .card .background .tiles .tile.tile-4, .card .background .tiles .tile.tile-6, .card .background .tiles .tile.tile-10 {
+	-webkit-animation-delay: -2s;
+			animation-delay: -2s;
+  }
+  .card .background .tiles .tile.tile-3, .card .background .tiles .tile.tile-5, .card .background .tiles .tile.tile-8 {
+	-webkit-animation-delay: -4s;
+			animation-delay: -4s;
+  }
+  .card .background .tiles .tile.tile-2, .card .background .tiles .tile.tile-9 {
+	-webkit-animation-delay: -6s;
+			animation-delay: -6s;
+  }
+  .card .background .tiles .tile.tile-1 {
+	top: 0;
+	left: 0;
+	height: 10%;
+	width: 22.5%;
+  }
+  .card .background .tiles .tile.tile-2 {
+	top: 0;
+	left: 22.5%;
+	height: 10%;
+	width: 27.5%;
+  }
+  .card .background .tiles .tile.tile-3 {
+	top: 0;
+	left: 50%;
+	height: 10%;
+	width: 27.5%;
+  }
+  .card .background .tiles .tile.tile-4 {
+	top: 0;
+	left: 77.5%;
+	height: 10%;
+	width: 22.5%;
+  }
+  .card .background .tiles .tile.tile-5 {
+	top: 10%;
+	left: 0;
+	height: 22.5%;
+	width: 22.5%;
+  }
+  .card .background .tiles .tile.tile-6 {
+	top: 10%;
+	left: 22.5%;
+	height: 22.5%;
+	width: 27.5%;
+  }
+  .card .background .tiles .tile.tile-7 {
+	top: 10%;
+	left: 50%;
+	height: 22.5%;
+	width: 27.5%;
+  }
+  .card .background .tiles .tile.tile-8 {
+	top: 10%;
+	left: 77.5%;
+	height: 22.5%;
+	width: 22.5%;
+  }
+  .card .background .tiles .tile.tile-9 {
+	top: 32.5%;
+	left: 50%;
+	height: 22.5%;
+	width: 27.5%;
+  }
+  .card .background .tiles .tile.tile-10 {
+	top: 32.5%;
+	left: 77.5%;
+	height: 22.5%;
+	width: 22.5%;
+  }
+  @-webkit-keyframes tile {
+	0%, 12.5%, 100% {
+	  opacity: 1;
+	}
+	25%, 82.5% {
+	  opacity: 0;
+	}
+  }
+  @keyframes tile {
+	0%, 12.5%, 100% {
+	  opacity: 1;
+	}
+	25%, 82.5% {
+	  opacity: 0;
+	}
+  }
+  .card .background .line {
+	position: absolute;
+	inset: 0;
+	opacity: 0;
+	transition: opacity 0.35s;
+  }
+  .card .background .line:before, .card .background .line:after {
+	content: "";
+	position: absolute;
+	background-color: var(--card-line-color);
+	transition: transform 0.35s;
+  }
+  .card .background .line:before {
+	left: 0;
+	right: 0;
+	height: 1px;
+	transform-origin: 0 50%;
+	transform: scaleX(0);
+  }
+  .card .background .line:after {
+	top: 0;
+	bottom: 0;
+	width: 1px;
+	transform-origin: 50% 0;
+	transform: scaleY(0);
+  }
+  .card .background .line.line-1:before {
+	top: 10%;
+  }
+  .card .background .line.line-1:after {
+	left: 22.5%;
+  }
+  .card .background .line.line-1:before, .card .background .line.line-1:after {
+	transition-delay: 0.3s;
+  }
+  .card .background .line.line-2:before {
+	top: 32.5%;
+  }
+  .card .background .line.line-2:after {
+	left: 50%;
+  }
+  .card .background .line.line-2:before, .card .background .line.line-2:after {
+	transition-delay: 0.15s;
+  }
+  .card .background .line.line-3:before {
+	top: 55%;
+  }
+  .card .background .line.line-3:after {
+	right: 22.5%;
+  }
+  .card:hover {
+	box-shadow: 0px 3px 6px var(--card-hover-box-shadow-1), 0px var(--card-hover-box-shadow-2-y) var(--card-hover-box-shadow-2-blur) var(--card-hover-box-shadow-2), 0 0 0 1px var(--card-hover-border-color);
+  }
+  .card:hover .icon::after {
+	background-color: var(--card-hover-icon-background-color);
+	border-color: var(--card-hover-icon-border-color);
+  }
+  .card:hover .icon svg {
+	color: var(--card-hover-icon-color);
+  }
+  .card:hover .shine {
+	opacity: 1;
+	transition-duration: 0.5s;
+	transition-delay: 0s;
+  }
+  .card:hover .background .tiles {
+	opacity: 1;
+	transition-delay: 0.25s;
+  }
+  .card:hover .background .tiles .tile {
+	-webkit-animation-name: tile;
+			animation-name: tile;
+  }
+  .card:hover .background .line {
+	opacity: 1;
+	transition-duration: 0.15s;
+  }
+  .card:hover .background .line:before {
+	transform: scaleX(1);
+  }
+  .card:hover .background .line:after {
+	transform: scaleY(1);
+  }
+  .card:hover .background .line.line-1:before, .card:hover .background .line.line-1:after {
+	transition-delay: 0s;
+  }
+  .card:hover .background .line.line-2:before, .card:hover .background .line.line-2:after {
+	transition-delay: 0.15s;
+  }
+  .card:hover .background .line.line-3:before, .card:hover .background .line.line-3:after {
+	transition-delay: 0.3s;
+  }
+  
+  html {
+	box-sizing: border-box;
+	-webkit-font-smoothing: antialiased;
+  }
+  
+  * {
+	box-sizing: inherit;
+  }
+  *:before, *:after {
+	box-sizing: inherit;
+  }
+  
+  body {
+	min-height: 100vh;
+	display: flex;
+	font-family: "Inter", Arial;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--background-color);
+	overflow: hidden;
+  }
+  body:before {
+	content: "";
+	position: absolute;
+	inset: 0 -60% 65% -60%;
+	background-image: radial-gradient(ellipse at top, #10b981 0%, var(--background-color) 50%);
+	opacity: var(--blur-opacity);
+  }
+
+
 .container h2
 {
 	width:100%;
-	color:#45f3ff;
+	color:#34d399;
 	font-size: 36px;
 	text-align: center;
 	margin-bottom: 10px;
 }
+
+.container h2 span{
+	transition: 1s linear
+}
+
+.container h2:hover span{
+	color: #fff;
+	text-shadow: 0 0 10px #fff,
+					0 0 20px #fff, 
+					0 0 40px #fff;
+}
+
+
 .container .row100
 {
+	margin-bottom: 5%;
 	position: relative;
 	width: 100%;
 	display: grid;
@@ -36,9 +423,9 @@ margin:0;
 	display: flex;
 	justify-content: center;
 	position: relative;
-	width: 100%;
+	width: 90%;
 	padding: 0 10px;
-	margin: 30px 0 10px;
+	margin: 30px auto 10px ;
 	transition: 0.5s;
 }
 .container .row100 .inputBox
@@ -46,10 +433,11 @@ margin:0;
 	position: relative;
 	width: 100%;
 	height: 40px;
-	color: #45f3ff;
+	color: #34d399;
 }
 .container .row100 .inputBox input
 {
+	border-radius: 6px;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -86,7 +474,7 @@ margin:0;
 	display: block;
 	width: 100%;
 	height: 2px;
-	background: #45f3ff;
+	background: #34d399;
 	transition: 0.5s;
 	border-radius: 6px;
 	pointer-events: none;
@@ -95,6 +483,7 @@ margin:0;
 .container .row100 .inputBox input:valid ~ .line
 {
 	height: 100%;
+	border-radius: 6px;
 }
 
 .bouton_submit
@@ -104,17 +493,25 @@ margin:0;
 	padding: 7px 35px;
 	cursor: pointer;
 	outline: none;
-	background: #45f3ff;
+	background: #34d399;
 	color: #000;
 	font-size: 18px;
 	border-radius: 6px;
 }
 
-.texte
-{
+.affichage
+{	
+	align-items: center;
+	display: flex;
+	justify-content: center;
 	position: relative;
 	margin-top: 55px; 
 	text-align: center;
 	color : #ffffff;
 
+}
+
+.affichage div
+{
+	padding: 5%;
 }
