--- a/style.css
+++ b/style.css
@@ -515,3 +515,43 @@ body {
 {
 	padding: 5%;
 }
+
+
+
+.autocomplete {
+	/*the container must be positioned relative:*/
+	position: relative;
+	display: inline-block;
+  }
+
+  .autocomplete-items {
+	border-radius: 6px;
+	background-color: #ffffff;
+	margin-top: 3px;
+	position: absolute;
+	border-bottom: none;
+	border-top: none;
+	z-index: 99;
+	/*position the autocomplete items to be the same width as the container:*/
+	top: 100%;
+	left: 0;
+	right: 0;
+  }
+  .autocomplete-items div {
+	margin-top: 3px;
+	padding: 10px;
+	cursor: pointer;
+	border-radius: 6px;
+	background-color: #ffffff;
+	/* border-bottom: 1px solid #34d399; */
+
+  }
+  .autocomplete-items div:hover {
+	/*when hovering an item:*/
+	background-color: #e9e9e9;
+  }
+  .autocomplete-active {
+	/*when navigating through the items using the arrow keys:*/
+	background-color: #34d399 !important;
+	color: #ffffff;
+  }
